...
    <string name="card_description">Secondary copy for this banner can wrap to two lines if needed.</string>
    <!-- UI Label Button -->
    <string name="card_button">Button</string>

    <!-- V2 Dialog -->
    <!-- UI Label to display the dialog -->
    <string name="show_dialog">Show Dialog</string>
    <!-- UI label to close the dialog when clicked outside -->
    <string name="dismiss_dialog_outside">Dismiss dialog on clicking outside</string>
    <!-- UI label to close the dialog when back button is pressed -->
    <string name="dismiss_dialog_back">Dismiss dialog on back press</string>
    <!-- Text denoting a dialog is closed -->
    <string name="dismiss_dialog">Dialog dismissed</string>
    <!-- UI Label Cancel -->
    <string name="cancel">Cancel</string>
    <!-- UI Label Ok -->
    <string name="ok">Ok</string>
    <!-- A sample description -->
    <string name="dialog_description">A dialog is a small window that prompts the user to make a decision or enter additional information.</string>

    <!-- V2 Drawer -->
    <!-- UI Label for Button which open Drawer-->
    <string name="drawer_open">Open Drawer</string>
...
    <string name="tooltip_title">Title</string>
    <!-- UI Label for ToolTip Text-->
    <string name="tooltip_text">Tooltip Text</string>
    <!-- Text for button that shows Custom content Tooltip on tap -->
    <string name="tooltip_custom_content">Tap for Custom Content Tooltip</string>
    <!--UI label showing tooltip message -->
    <string name="tooltip_top_start">Top Start </string>
    <!--UI label showing tooltip message -->
    <string name="tooltip_top_end">Top End </string>
    <!--UI label showing tooltip message -->
    <string name="tooltip_bottom_start">Bottom Start </string>
    <!--UI label showing tooltip message -->
    <string name="tooltip_bottom_end">Bottom End </string>
    <!--UI label showing tooltip message -->
    <string name="tooltip_center">Center </string>
    <!--UI label showing tooltip message -->
    <string name="tooltip_custom_center">Custom Center</string>
...
