...
import androidx.compose.ui.window.SecureFlagPolicy
import com.microsoft.fluentui.theme.FluentTheme
import com.microsoft.fluentui.theme.token.ControlTokens
import com.microsoft.fluentui.theme.token.controlTokens.DialogInfo
import com.microsoft.fluentui.theme.token.controlTokens.DialogTokens

const val DIALOG_TEST_TAG = "Fluent Dialog"

/**
 * Create a dialog with the given content. The dialog does not fill the screen and is normally
 * used for modal events that require users to take an action before they can proceed.
 * @param onDismiss Execute any instruction when user tries to close the dialog.
 * @param dismissOnBackPress dismiss the dialog when back button is pressed.
...
